db hw