@@ -1,51 +1,44 @@
 package ru.hogwarts.school.service;
 
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import ru.hogwarts.school.model.Faculty;
-import ru.hogwarts.school.model.Student;
+import ru.hogwarts.school.repository.FacultyRepository;
 
 import java.util.Collection;
-import java.util.HashMap;
 import java.util.List;
-import java.util.Map;
-
-import static java.util.stream.Collectors.toList;
 
 @Service
 public class FacultyService {
 
-    private final Map<Long, Faculty> faculties = new HashMap<>();
+    private final FacultyRepository facultyRepository;
 
-    private long lastId = 0;
-
-    public Faculty createStudent(Faculty faculty) {
-        faculty.setId(++lastId);
-        faculties.put(lastId, faculty);
-        return faculty;
+    @Autowired
+    public FacultyService(FacultyRepository facultyRepository) {
+        this.facultyRepository = facultyRepository;
     }
 
-    public Faculty findStudent(long id) {
-        return faculties.get(id);
+    public Faculty createStudent(Faculty faculty) {
+        return facultyRepository.save(faculty);
+    }
+
+    public Faculty findStudent(Long id) {
+        return facultyRepository.findById(id).get();
     }
 
     public Faculty editFaculty(Faculty faculty) {
-        if (faculties.containsKey(faculty.getId())) {
-            faculty.setId(++lastId);
-            faculties.put(lastId, faculty);
-            return faculty;
-        }
-        return null;
+        return facultyRepository.save(faculty);
     }
 
-    public Faculty deleteFaculty(long id) {
-        return faculties.remove(id);
+    public void deleteFaculty(long id) {
+        facultyRepository.deleteById(id);
     }
 
     public Collection<Faculty> getAllStudents() {
-        return faculties.values();
+        return facultyRepository.findAll();
     }
 
     public List<Faculty> findFacultyByColor(String color) {
-        return faculties.values().stream().filter(faculty -> faculty.getColor().equalsIgnoreCase(color)).collect(toList());
+        return facultyRepository.findAll().stream().filter(faculty -> faculty.getColor().equalsIgnoreCase(color)).toList();
     }
 }
